# rye

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/rye-app/: Cargo.toml
crates/rye-app/src/: capture.rs  lib.rs
crates/rye-asset/: Cargo.toml
crates/rye-asset/src/: lib.rs  watcher.rs
crates/rye-asset/tests/: watcher.rs
crates/rye-camera/: Cargo.toml
crates/rye-camera/src/: camera.rs  controller.rs  lib.rs
crates/rye-collision/: Cargo.toml
crates/rye-collision/src/: lib.rs
crates/rye-core/: Cargo.toml
crates/rye-core/src/: lib.rs
crates/rye-egui/: Cargo.toml
crates/rye-egui/src/: integration.rs  lib.rs  world.rs
crates/rye-input/: Cargo.toml
crates/rye-input/src/: lib.rs
crates/rye-math/: Cargo.toml
crates/rye-math/src/: bivector.rs  blended.rs  euclidean.rs  euclidean_r2.rs  euclidean_r4.rs  hyperbolic.rs  lib.rs  space.rs  spherical.rs  tangent.rs
crates/rye-physics/: Cargo.toml
crates/rye-physics/src/: body.rs  collider.rs  euclidean_r2.rs  euclidean_r3.rs  euclidean_r4.rs  field.rs  integrator.rs  lib.rs  manifold.rs  narrowphase.rs  response.rs  world.rs
crates/rye-physics/src/collision/: epa.rs  epa_r4.rs  gjk.rs  gjk_r4.rs  mod.rs  simplex_r4.rs  vector_ops.rs
crates/rye-player/: Cargo.toml
crates/rye-player/src/: lib.rs
crates/rye-render/: Cargo.toml
crates/rye-render/src/: device.rs  graph.rs  lattice.rs  lib.rs  raymarch.rs
crates/rye-render/src/raymarch/: geodesic.rs  hyperslice4d.rs  mod.rs  polytope_data.rs
crates/rye-scenes/: Cargo.toml
crates/rye-scenes/src/: lib.rs
crates/rye-sdf/: Cargo.toml
crates/rye-sdf/src/: combinator.rs  lib.rs  primitive.rs  primitive4.rs  scene.rs  scene4.rs
crates/rye-shader/: Cargo.toml
crates/rye-shader/src/: db.rs  kernel.wgsl  lib.rs
crates/rye-shape/: Cargo.toml
crates/rye-shape/src/: lib.rs
crates/rye-text/: Cargo.toml
crates/rye-text/src/: lib.rs
crates/rye-time/: Cargo.toml
crates/rye-time/src/: fixed_timestep.rs  lib.rs
crates/rye-window/: Cargo.toml
crates/rye-window/src/: lib.rs
examples/: capture.rs
examples/blended/: blended.wgsl  main.rs
examples/corridor/: corridor.wgsl  main.rs  scene.rs
examples/fractal/: camera.rs  fractal.wgsl  main.rs
examples/fractal_app/: main.rs
examples/geodesic_spheres/: main.rs  scene.rs  spheres.wgsl
examples/hello_shapes/: hud.rs  main.rs
examples/hypersphere/: hypersphere.wgsl  legacy.rs  main.rs
examples/lattice/: lattice.wgsl  main.rs  scene.rs
examples/overlapping_sdfs/: main.rs
examples/pentatope_slice/: main.rs  pentatope_slice.wgsl
examples/physics2d/: main.rs  physics2d.wgsl
examples/physics3d/: main.rs  physics3d.wgsl
examples/physics4d/: main.rs
examples/polytope_smoke/: main.rs
examples/sysinfo/: main.rs
examples/text_smoke/: main.rs
examples/ui_smoke/: main.rs
src/: lib.rs  prelude.rs
