[workspace]
members = [
  "crates/rye-core",
  "crates/rye-window",
  "crates/rye-render",
  "crates/rye-asset",
  "crates/rye-scenes",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/ORG/rye"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glam = { version = "0.27", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
hashbrown = "0.14"
smallvec = "1.13"
parking_lot = "0.12"

wgpu  = { version = "26", features = ["wgsl"] }
winit = "0.30"
ab_glyph = "0.2"
bytemuck = { version = "1", features = ["derive"] }
notify = "6"
rayon = "1.10"

[package]
name = "rye"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye: a Rust game engine with non-Euclidean geometry as a primitive"

[dependencies]
rye-core   = { path = "crates/rye-core" }
rye-window = { path = "crates/rye-window" }
rye-render = { path = "crates/rye-render" }
rye-asset  = { path = "crates/rye-asset" }
rye-scenes = { path = "crates/rye-scenes" }
ab_glyph.workspace = true

[features]
default = []

[dev-dependencies]
anyhow = "1"
pollster = "0.3"
winit = { workspace = true }
wgpu  = { workspace = true }
