[workspace]
members = [
  "crates/rye-math",
  "crates/rye-shape",
  "crates/rye-sdf",
  "crates/rye-time",
  "crates/rye-shader",
  "crates/rye-render",
  "crates/rye-asset",
  "crates/rye-input",
  "crates/rye-camera",
  "crates/rye-player",
  "crates/rye-collision",
  "crates/rye-physics",
  "crates/rye-app",
  "crates/rye-text",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Zach Humes <humesze@gmail.com>"]
repository = "https://github.com/humesze-llc/rye"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glam = { version = "0.27", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"

wgpu  = { version = "26", features = ["wgsl"] }
winit = "0.30"
naga = { version = "26", features = ["wgsl-in"] }
bytemuck = { version = "1", features = ["derive"] }
notify = "6"

[package]
name = "rye"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye: a Rust game engine with non-Euclidean geometry as a primitive"

[dependencies]
rye-math      = { path = "crates/rye-math" }
rye-sdf       = { path = "crates/rye-sdf" }
rye-time      = { path = "crates/rye-time" }
rye-shader    = { path = "crates/rye-shader" }
rye-render    = { path = "crates/rye-render" }
rye-asset     = { path = "crates/rye-asset" }
rye-input     = { path = "crates/rye-input" }
rye-camera    = { path = "crates/rye-camera" }
rye-player    = { path = "crates/rye-player" }
rye-collision = { path = "crates/rye-collision" }
rye-physics   = { path = "crates/rye-physics" }
rye-app       = { path = "crates/rye-app" }
rye-text      = { path = "crates/rye-text" }

[features]
default = []

[dev-dependencies]
anyhow = "1"
pollster = "0.3"
winit = { workspace = true }
wgpu  = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glam = { workspace = true }
png = "0.17"
gif = "0.13"
