[package]
name = "rye-asset"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye asset system: filesystem watching and hot-reload event stream."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile = "3"
