[package]
name = "rye-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye camera controllers: orbit and first-person."

[dependencies]
glam.workspace = true
rye-input = { path = "../rye-input" }
rye-math  = { path = "../rye-math" }
