[package]
name = "rye-collision"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye collision detection: Space-generic sphere-sphere contacts."

[dependencies]
glam.workspace = true
rye-math = { path = "../rye-math" }
