[package]
name = "rye-math"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye math primitives: the Space trait and concrete geometries (Euclidean, hyperbolic, spherical, 4D)."

[dependencies]
glam.workspace = true
serde.workspace = true

[dev-dependencies]
approx = "0.5"
