[package]
name = "rye-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye rigid-body physics: Space-generic integration, narrowphase dispatch, impulse solver."

[dependencies]
glam.workspace = true
rye-math      = { path = "../rye-math" }
rye-shape     = { path = "../rye-shape" }
rye-collision = { path = "../rye-collision" }
