[package]
name = "rye-player"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye player state: Space-generic geodesic movement driven by FrameInput."

[dependencies]
glam.workspace = true
rye-input = { path = "../rye-input" }
rye-math  = { path = "../rye-math" }
