[package]
name = "mars-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
2d = []
3d = []
voxel = []
postfx = []

[dependencies]
anyhow.workspace = true
tracing.workspace = true
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
ab_glyph.workspace = true