[package]
name = "rye-sdf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye SDF scene module helpers."

[dependencies]
rye-math  = { path = "../rye-math" }
rye-shape = { path = "../rye-shape" }
glam.workspace = true
serde.workspace = true
ron.workspace = true
