[package]
name = "rye-shader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye shader system: WGSL loading, Space intrinsic injection, hot reload."

[dependencies]
rye-math  = { path = "../rye-math" }
rye-asset = { path = "../rye-asset" }

anyhow.workspace = true
tracing.workspace = true
wgpu.workspace = true
