[package]
name = "rye-shader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye shader system: WGSL loading, Space intrinsic injection, hot reload."

[dependencies]
rye-math  = { path = "../rye-math" }
rye-asset = { path = "../rye-asset" }

anyhow.workspace = true
naga.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true

[dev-dependencies]
bytemuck.workspace = true
glam.workspace = true
pollster = "0.3"
tempfile = "3"
