[package]
name = "rye-shape"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye canonical geometric primitives: single Shape enum used by both rye-sdf (rendering) and rye-physics (collision)."

[dependencies]
glam = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ron = { workspace = true }
