[package]
name = "rye-text"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rye text rendering: glyphon-backed screen-space text overlay for game UIs and HUDs."

[dependencies]
wgpu      = { workspace = true }
bytemuck  = { workspace = true }
ab_glyph  = "0.2"
anyhow    = { workspace = true }
tracing   = { workspace = true }
